--- a/_includes/grace-article-modal.html
+++ b/_includes/grace-article-modal.html
@@ -1,7 +1,7 @@
 <div class="center-me margin-top-75">
     <h2 class="">A Country Called Syria: The Power of IdeaJams</h2>
     <p><span class="fa fa-pencil"></span> Grace Hickey</p>
-    <div class="share-me" id="share-nll-task-force"></div>
+    <div class="share-me" id="share-power-ideajams"></div>
 </div>
 <div class="col-sm-12 col-md-8 col-md-offset-2 mobile-margin-b margin-b-100">
     <p>Leading my first IdeaJam was both daunting and thrilling. When I first joined SOURCE at the start of the year, I never could have imagined myself taking on so much responsibility as an Associate Consultant. Yet, when I found out that I would be leading an IdeaJam with A Country Called Syria, I was excited to help and hoping for the best.</p>
