--- a/_includes/olivia-article-modal.html
+++ b/_includes/olivia-article-modal.html
@@ -1,7 +1,7 @@
 <div class="center-me margin-top-75">
     <h2 class="">Raising a Nonprofit</h2>
     <p><span class="fa fa-pencil"></span>Olivia Ison</p>
-    <div class="share-me" id="share-design-task-force"></div>
+    <div class="share-me" id="share-raising-nonprofit"></div>
 </div>
 <div class="col-sm-12 col-md-8 col-md-offset-2 mobile-margin-b margin-b-100">
     <p>Most nonprofits are bred from passion; they are coordinated responses to a recognized need. An individual or a group of people is struck by a problem, then sets out to address it. In doing so, they often focus more on their work externally than internally; they focus on where the passion is concentrated. However, despite the undeniable power and momentum born from passion, organizations must also build strong foundations to increase their impact and grow sustainably. Young nonprofits must prioritize internal work and improve internal structure. Ultimately, operational success is reliant on a well-defined mission and vision, a clear organizational structure and a commitment to balancing needs and dreams. </p>
